--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,2 +1,12 @@
-<h1>User#login</h1>
-<p>Find me in app/views/user/login.html.erb</p>
+<% flash.each do |key, msg| %>
+    <%= content_tag :div, msg, :class => [key, " message"], :id => "notice_ #{key}" %>
+    <% content_tag :script, :type => "text/javascript" do %>
+        setTimeout("new Effect.Fade('notice_<%= key %>');", 15000);
+    <% end %>
+<% end %>
+
+<% form_tag :action => 'process_login' do %>
+   Username: <%= text_field "user", "name" %>
+    Password: <%= password_field "user", "password" %>
+  <%= submit_tag %>
+<% end %> 
