--- a/app/views/user/my_account.html.erb
+++ b/app/views/user/my_account.html.erb
@@ -1,2 +1,3 @@
-<h1>User#my_account</h1>
-<p>Find me in app/views/user/my_account.html.erb</p>
+  <h1>Account Info</h1>
+
+  <p>Your username is <%= User.find(session[:id]).name %> 
