Tidy up the login page a little bit.

--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -23,10 +23,16 @@
         <td>&nbsp;</td><td>Remember me <input type="checkbox" name="_spring_security_remember_me" /></td>
       </tr>
       <tr>
-        <td>&nbsp;</td><td><%= submit_tag %></td>
+        <td>&nbsp;</td><td><%= submit_tag "Login" %></td>
       </tr>
     </table>                
   <% end %>
+  <p>
+    Forgotten your password? Click <a href="http://www.google.co.uk">here</a>.
+  </p>
+  <p>
+    Want an account, but not got one? <a href="http://www.google.co.uk">Sign up</a> now.
+  </p>
 </div>
 
 <div id="disclaimer" class="ui-widget-content ui-corner-all">
