--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -9,6 +9,7 @@ charset=iso-8859-1" />
 <%= javascript_include_tag 'jquery', 'application' %>
 <%= stylesheet_link_tag "main" %>
 <%= stylesheet_link_tag "login" %>
+<%= stylesheet_link_tag "register" %>
 </head>
 <body>
 <div id="container">
@@ -21,5 +22,8 @@ charset=iso-8859-1" />
 </div>
 <div id="sidebar"></div>
 </div>
+<% if ENV["RAILS_ENV"] == "development" %>
+  <%= debug(params) %>
+<% end %>
 </body>
 </html>
