Add some debug to the bottom of every page when we are running in development mode.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3551,3 +3551,13 @@ ul.as-list,  x:-moz-any-link, x:default {
 BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
 	border: none;
 }
+
+
+.debug_dump {
+  text-align: left;
+  border-top: 1px dashed black;
+  background: #ccc;
+  margin: 0;
+  padding: 0.5em;
+}
+
