Basic registration mechanism is now in place.

--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -14,10 +14,10 @@
     <table border="0">
       <tr>
         <td rowspan="4" style="padding: 0 1em 0 0;"><img src="/images/logo-80px.png" width="80" /></td>
-        <td>Username</td><td><%= text_field "user", "name", :width => "150px" %></td>
+        <td><label for="name">Name:</label></td><td><%= form.text_field :name, :size => User::NAME_SIZE, :max_length => User::NAME_MAX_LENGTH %></td>
       </tr>
       <tr>
-        <td>Email</td><td><%= text_field "user", "email", :width => "150px" %></td>
+        <td><label for="email">Email:</label></td><td><%= form.text_field :email, :size => User::EMAIL_SIZE, :max_length => User::EMAIL_MAX_LENGTH %></td>
       </tr>
       <tr>
         <td>&nbsp;</td><td><%= submit_tag "Register" %></td>
