Added some basic validation checks for registering new users.

--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -5,12 +5,16 @@
     <% end %>
 <% end %>
 
+<%= error_messages_for 'user' %>
+
 <div id="register" class="dynamictable ui-widget-content ui-corner-all ">
   <div id="heading" class="ui-widget-header ui-corner-all dynamictable-caption dynamictable-caption-block">
     Register with Dasher
   </div>
 
   <% form_for :user do |form| %>
+    <fieldset>
+
     <table border="0">
       <tr>
         <td rowspan="4" style="padding: 0 1em 0 0;"><img src="/images/logo-80px.png" width="80" /></td>
@@ -22,7 +26,8 @@
       <tr>
         <td>&nbsp;</td><td><%= submit_tag "Register" %></td>
       </tr>
-    </table>                
+    </table>
+    </fieldset>            
   <% end %>
 </div>
 
