--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -10,14 +10,14 @@
     Dasher login
   </div>
 
-  <% form_tag :action => 'process_login' do %>
+  <% form_for :user do |form| %>
     <table border="0">
       <tr>
         <td rowspan="4" style="padding: 0 1em 0 0;"><img src="/images/logo-80px.png" width="80" /></td>
-        <td>Username</td><td><%= text_field "user", "name", :width => "150px" %></td>
+        <td><label for="name">Name:</label></td><td><%= form.text_field :name, :size => User::NAME_SIZE, :max_length => User::NAME_MAX_LENGTH %></td>
       </tr>
       <tr>
-        <td>Password</td><td><%= password_field "user", "password", :width => "150px" %></td>
+        <td><label for="password">Password:</label></td><td><%= form.password_field :password, :size => User::PASSWORD_SIZE, :max_length => User::PASSWORD_MAX_LENGTH %></td></td>
       </tr>
       <tr>
         <td>&nbsp;</td><td>Remember me <input type="checkbox" name="_spring_security_remember_me" /></td>
@@ -28,10 +28,10 @@
     </table>                
   <% end %>
   <p>
-    Forgotten your password? Click <a href="http://www.google.co.uk">here</a>.
+    Forgotten your password? Click <%= link_to "here", :controller => "user", :action => "forgotten" %>.
   </p>
   <p>
-    Want an account, but not got one? <a href="http://www.google.co.uk">Sign up</a> now.
+    Want an account, but not got one? Click <%= link_to "here", :controller => "user", :action => "register" %> now.
   </p>
 </div>
 
