--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -1,15 +1,78 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+		"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html;.
-charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta http-equiv="Content-Language" content="en-us" />
-<title>Dasher - Simple Agile Management</title>
+<title><%= @title %></title>
 <%= javascript_include_tag 'jquery', 'application' %>
 <%= stylesheet_link_tag "main" %>
 <%= stylesheet_link_tag "login" %>
 <%= stylesheet_link_tag "register" %>
+
+<!-- START PAGE HEADER CONTAINER -->
+
+<div id="header">
+    <% if !logged_in? %>
+      <div id="login-box">
+        <p align="right"><%= link_to "Forgotten your password?", :controller => "email", :action => "remind" %></p>
+        <% form_for :user, @user, :url => {:controller => "user", :action => "login"} do |f| %>
+          <table align="right">
+            <tr>
+              <td>
+                <%= f.text_field :name,
+                                 :size => User::NAME_SIZE, 
+                                 :maxlength => User::NAME_MAX_LENGTH %>
+              </td>
+              <td>
+                <%= f.password_field :password,
+                                     :size => User::PASSWORD_SIZE,
+                                     :maxlength => User::PASSWORD_MAX_LENGTH %>
+              </td>
+              <td>
+                <%= image_submit_tag "/images/sign_in.png", 
+                                        :border => 0, 
+                                      :class => 'image-submit' %>
+              </td>
+            </tr>
+          </table>
+        <% end %>
+        <p align="right"></p>
+      </div>
+    <% else %>
+      <% @user = User.find(session[:user_id]) %>
+      <div id="empty-login">
+        <table align="right">
+         <tr>
+          <td>
+            <p align="right">You are logged in as:</p>
+            <table>
+              <tr>
+                <td>
+                  <%= @user.name + " (" + @user.email + ")  " %>
+                </td>
+                <td>
+                  <%= link_to image_tag("sign_out.png", :border => 0), 
+                              :controller => "user", 
+                              :action => "logout" %>
+                </td>
+              </tr>
+            </table>
+          </td>
+          <td>
+            <% avatar_filename = 'avatars/' + @user.name + '_thumbnail.png' %>
+            <% avatar_filename = File.exists?(File.join(RAILS_ROOT, "public", "images", avatar_filename)) ? avatar_filename : "avatars/empty_avatar_thumbnails.jpg" %>
+            <%= link_to image_tag(avatar_filename, :border => 0),
+                        :controller => "user" %></a>
+          </td>
+        </tr>
+        </table>
+      </div>
+    <% end %> 
+
+    <!-- END PAGE HEADER CONTAINER -->
+
+</div>
 </head>
 <body>
 <% flash.each do |key, msg| %>
@@ -26,13 +89,65 @@ charset=iso-8859-1" />
 <div id="content">
 <%= yield -%>
 </div>
-<div id="sidebar"></div>
-</div>
 <div id="disclaimer" class="ui-widget-content ui-corner-all">
   Please report found bugs at the <a href="http://github.com/leenookx/Dasher/issues">Dasher Issue Tracker</a></p>
 </div>
-<% if ENV["RAILS_ENV"] == "development" %>
-  <%= debug(params) %>
-<% end %>
+<div id="footer">
+
+		<hr />
+		
+           <%= link_to "Copyright",  { :controller => 'site', :action => 'copyright' }, { :class => "designer", :target => "_blank" } %> 2009-2010 <a href="http://www.purplemonkeys.co.uk" class="designer" target="_blank">Purple Monkeys</a>, all rights reserved.
+
+  <hr/>
+
+		<%= link_to_unless_current "Main",  { :controller => 'site', :action => 'index' }, { :class => "small-navigation" } %>
+                | <%= link_to_unless_current "Terms and Conditions",  { :controller => 'site', :action => 'terms' }, { :class => "small-navigation" } %>
+		| <%= link_to_unless_current "Privacy",  { :controller => 'site', :action => 'privacy' }, { :class => "small-navigation" } %>
+		| <%= link_to_unless_current "About Us",  { :controller => 'site', :action => 'about' }, { :class => "small-navigation" } %>
+		| <%= link_to_unless_current "Contact Us",  { :controller => 'site', :action => 'contact' }, { :class => "small-navigation" } %>
+		| <%= link_to_unless_current "FAQs",  { :controller => 'site', :action => 'faqs' }, { :class => "small-navigation" } %>
+		| <%= link_to_unless_current "Report Abuse",  { :controller => 'site', :action => 'abuse' }, { :class => "small-navigation" } %>
+
+		<br />
+
+		<hr />
+
+	</div>
+
+	<!-- END FOOTER CONTAINER -->
+
+	<% if ENV["RAILS_ENV"] == "development" %>
+		<!-- START DEBUG ENTRIES -->
+		
+		<br />
+		<hr>
+		
+		<div id="debug">
+			<a href="#" onclick="Element.toggle('params_debug_info');return false">params</a> |
+			<a href="#" onclick="Element.toggle('session_debug_info');return false">session</a> |
+			<a href="#" onclick="Element.toggle('env_debug_info');return false">env</a> |
+			<a href="#" onclick="Element.toggle('request_debug_info');return false">request</a>
+			
+			<fieldset id="params_debug_info" class="debug_info" style="display:none">
+				<legend>params</legend>
+				<%= debug(params) %>
+			</fieldset>
+
+			<fieldset id="session_debug_info" class="debug_info" style="display:none">
+				<legend>session</legend>
+				<%= debug(session) %>
+			</fieldset>
+			<fieldset id="env_debug_info" class="debug_info" style="display:none">
+				<legend>env</legend>
+				<%= debug(request.env) %>
+			</fieldset>
+			<fieldset id="request_debug_info" class="debug_info" style="display:none">
+				<legend>request</legend>
+				<%= debug(request) %>
+			</fieldset>
+		</div>
+			
+		<!-- END DEBUG ENTRIES -->
+	<% end %>
 </body>
 </html>
