--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -12,7 +12,7 @@
 
 <!-- START PAGE HEADER CONTAINER -->
 
-<div id="header" class="ui-widget-content ui-corner-all">
+<div id="header" class="ui-widget-header ui-widget-content ui-corner-all">
     <h1>Dasher</h1>
     <h3>Agile management. Simplified</h3>
     <% if !logged_in? %>
