--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta http-equiv="Content-Language" content="en-us" />
 <title><%= @title %></title>
-<%= javascript_include_tag 'jquery', 'application' %>
+<%= javascript_include_tag :defaults %>
 <%= stylesheet_link_tag "main" %>
 <%= stylesheet_link_tag "login" %>
 <%= stylesheet_link_tag "register" %>
@@ -13,8 +13,15 @@
 <!-- START PAGE HEADER CONTAINER -->
 
 <div id="header" class="ui-widget-header ui-widget-content ui-corner-all">
-    <h1>Dasher</h1>
-    <h3>Agile management. Simplified</h3>
+  <table>
+  <tr>
+    <td>
+    <div id="branding">
+        <h1>Dasher</h1>
+        <h3>Agile management. Simplified</h3>
+    </div>
+    </td>
+    <td width="30%">
     <% if !logged_in? %>
       <div id="login-box">
         <p align="right"><%= link_to "Forgotten your password?", :controller => "email", :action => "remind" %></p>
@@ -71,9 +78,10 @@
         </table>
       </div>
     <% end %> 
-
+   </td>
     <!-- END PAGE HEADER CONTAINER -->
-
+  </tr>
+  </table>
 </div>
 </head>
 <body>
