--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3561,3 +3561,49 @@ BODY:first-of-type ul.as-list, x:-moz-any-link, x:default { /* Target FF 3.5+ */
   padding: 0.5em;
 }
 
+
+#login-box {
+  margin-right: 50px;
+  margin-bottom: 35px;
+  color: #3e0a06;
+  font-size: 10px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+
+
+#login-box p {
+  margin-top: 18px;
+  margin-bottom: 1px;
+  margin-right: 75px;
+}
+
+#empty-login {
+  margin-right: 10px;
+  margin-bottom: 65px;
+  color: #ffffff;
+  font-size: 10px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+
+#empty-login p {
+  margin-top: 1px;
+  margin-bottom: 1px;
+  margin-right: 75px;
+}
+
+
+#branding {
+  margin-right: 50px;
+  margin-bottom: 35px;
+  color: #3e0a06;
+  font-size: 10px;
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+
+
+#branding p {
+  margin-top: 18px;
+  margin-bottom: 1px;
+  margin-right: 75px;
+}
+
