--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,7 +4,7 @@
   <table border="0">
   <% @projects.each do |project| %>
     <tr>
-      <td rowspan="4" style="padding: 0 1em 0 0;"><img src="/images/logo-80px.png" width="80" /></td>
+      <td rowspan="4" style="padding: 0 1em 0 0;"><% if project.image.nil? %><%= image_tag "projects/_no_image.jpg", :width => "80" %><% else %><% filename = "projects/" + project.image %><%= image_tag filename, :width => "80" %><% end %></td>
       <td><%= project.name %></td>
     </tr>
     <tr>
