--- a/app/views/layouts/standard.html.erb
+++ b/app/views/layouts/standard.html.erb
@@ -22,6 +22,11 @@
     </div>
     </td>
     <td width="30%">
+    <% current_mode = site_mode %>
+    <% if current_mode == 0 %>
+      <div id="empty">
+      </div>
+    <% else %>
     <% if !logged_in? %>
       <div id="login-box">
         <p align="right"><%= link_to "Forgotten your password?", :controller => "email", :action => "remind" %></p>
@@ -77,7 +82,8 @@
         </tr>
         </table>
       </div>
-    <% end %> 
+    <% end %>
+    <% end %>
    </td>
     <!-- END PAGE HEADER CONTAINER -->
   </tr>
