--- a/app/views/user/my_account.html.erb
+++ b/app/views/user/my_account.html.erb
@@ -1,3 +1,14 @@
-  <h1>Account Info</h1>
+<div id="profile-sidebar">
+  <%= render :partial => 'avatar/sidebar_box' %>
+  <%= render :partial => 'invitations/sidebar_box' %>
+</div>
+<div id="profile-main">
+  <% flash.each do |key, msg| %>
+    <%= content_tag :div, msg, :class => [key, " message"], :id => "notice_#{key}" %>
+    <% content_tag :script, :type => "text/javascript" do %>
+      setTimeout("new Effect.Fade('notice_<%= key %>');", 15000);
+    <% end %>
+  <% end %>
 
-  <p>Your username is <%= User.find(session[:id]).name %> 
+  <%= render :partial => 'main_view', :locals => {:user => @user} %>
+</div>
