--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -7,16 +7,23 @@
 
 <%= error_messages_for 'user' %>
 
+<% if site_mode == SystemStatus::STATUS_NORMAL %>
 <div id="register" class="dynamictable ui-widget-content ui-corner-all ">
   <div id="heading" class="ui-widget-header ui-corner-all dynamictable-caption dynamictable-caption-block">
-    Register with Dasher
+    Register with Spengler
   </div>
 
   <% form_for :user do |form| %>
     <table border="0">
       <tr>
         <td rowspan="4" style="padding: 0 1em 0 0;"><img src="/images/logo-80px.png" width="80" /></td>
-        <td><label for="name">Name:</label></td><td><%= form.text_field :name, :size => User::NAME_SIZE, :max_length => User::NAME_MAX_LENGTH %></td>
+        <td><label for="name">Screen Name:</label></td><td><%= form.text_field :name, :size => User::NAME_SIZE, :max_length => User::NAME_MAX_LENGTH %></td>
+      </tr>
+      <tr>
+        <td><label for="forename">Forename:</label></td><td><%= form.text_field :forename, :size => User::FORENAME_SIZE, :max_length => User::FORENAME_MAX_LENGTH %></td>
+      </tr>
+      <tr>
+        <td><label for="surname">Surname:</label></td><td><%= form.text_field :surname, :size => User::SURNAME_SIZE, :max_length => User::SURNAME_MAX_LENGTH %></td>
       </tr>
       <tr>
         <td><label for="email">Email:</label></td><td><%= form.text_field :email, :size => User::EMAIL_SIZE, :max_length => User::EMAIL_MAX_LENGTH %></td>
@@ -27,7 +34,6 @@
     </table>
   <% end %>
 </div>
-
-<div id="disclaimer" class="ui-widget-content ui-corner-all">
-  Please report found bugs at the <a href="http://www.google.co.uk">Dasher Bug Tracker</a></p>
-</div>
+<% else %>
+  <p>Sorry, registrations are disabled at this time.</p>
+<% end %>
