Add a project page for created projects and added a basic mechanism to stop users viewing projects they don't own.

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,6 @@
+<h2><%= @project.name %></h2>
+<%= @project.description %>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
+<br />
+
 <%= link_to 'Back', projects_path %>
